compiler/src/test/resources/diagnostics/developmentappcomponent/mustExtendDevelopmentApplication.kt
// RENDER_DIAGNOSTICS_FULL_TEXT
package com.test

import com.squareup.development.shell.DevelopmentAppComponent

<!DEVELOPMENT_APP_COMPONENT_ERROR!>@DevelopmentAppComponent<!>
class MyApp
